// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TableDetailWizard Stateful example 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="TableDetailWizard__StyledWizardWrapper-sc-15frmjo-0 fotMIZ"
        >
          <div
            className="TableDetailWizardHeader__StyledDivWizardHeader-sc-1pa3n63-0 hKHZJV"
          >
            <h2
              className="TableDetailWizardHeader__StyledDivHeading-sc-1pa3n63-1 eKyans"
            >
              Create Physical Interface
            </h2>
            <div
              className="TableDetailWizardHeader__StyledButton-sc-1pa3n63-2 jNjnLX"
            >
              <button
                className="bx--btn bx--btn--ghost"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            className="TableDetailWizard__StyledWizardContainer-sc-15frmjo-1 kjwloH"
          >
            <div
              className="TableDetailWizardSidebar__StyledDivWizardHeader-sc-1wxoi33-0 fSDZCW"
            >
              <div
                className="WizardSidebar__StyledSidebar-sc-1bufur3-0 hklDaT"
                width={250}
              >
                <ul
                  className="bx--progress  bx--progress--vertical ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 fvWusc"
                  onChange={[Function]}
                >
                  <li
                    className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button bx--progress-step-button--unclickable"
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={-1}
                    >
                      <svg>
                        <path
                          d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
                        />
                        <title>
                          Identity
                        </title>
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Identity
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg>
                        <title>
                          State Model
                        </title>
                        <path
                          d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
                        />
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        State Model
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg>
                        <title>
                          Notifications
                        </title>
                        <path
                          d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
                        />
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Notifications
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg>
                        <title>
                          Final step
                        </title>
                        <path
                          d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
                        />
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Final step
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              className="TableDetailWizard__StyledContentContainer-sc-15frmjo-4 hxUSxO"
            >
              <div>
                <div
                  style={
                    Object {
                      "backgroundColor": "#eaeaea",
                    }
                  }
                >
                  <div>
                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, corrupti laboriosam, culpa similique quae dolorum provident vitae iusto at velit dignissimos reiciendis maiores voluptate fugit dolore harum unde laborum facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta placeat explicabo! Necessitatibus id neque accusantium molestiae officiis ducimus! Suscipit quae perferendis officiis vel, magnam est error! Vel, accusantium quas enim inventore natus adipisci autem at modi dolores assumenda mollitia ut facilis, deleniti aspernatur? Fuga at in expedita tempora cum quasi nemo neque alias id ullam omnis similique placeat provident, eum totam itaque perferendis, reiciendis laboriosam ducimus sunt facilis amet? Cupiditate voluptatem et, voluptas maxime sunt possimus repudiandae nisi necessitatibus?
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="TableDetailWizard__StyledFooter-sc-15frmjo-3 dZaQHZ"
          >
            <div
              className="bx--modal-footer"
            >
              <div
                className="WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
              >
                <button
                  className="iot--btn bx--btn bx--btn--secondary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="iot--btn bx--btn bx--btn--primary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TableDetailWizard Static 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="TableDetailWizard__StyledWizardWrapper-sc-15frmjo-0 fotMIZ"
        >
          <div
            className="TableDetailWizardHeader__StyledDivWizardHeader-sc-1pa3n63-0 hKHZJV"
          >
            <h2
              className="TableDetailWizardHeader__StyledDivHeading-sc-1pa3n63-1 eKyans"
            >
              Create Physical Interface
            </h2>
            <div
              className="TableDetailWizardHeader__StyledButton-sc-1pa3n63-2 jNjnLX"
            >
              <button
                className="bx--btn bx--btn--ghost"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            className="TableDetailWizard__StyledWizardContainer-sc-15frmjo-1 kjwloH"
          >
            <div
              className="TableDetailWizardSidebar__StyledDivWizardHeader-sc-1wxoi33-0 fSDZCW"
            >
              <div
                className="WizardSidebar__StyledSidebar-sc-1bufur3-0 hklDaT"
                width={250}
              >
                <ul
                  className="bx--progress  bx--progress--vertical ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 fvWusc"
                  onChange={[Function]}
                >
                  <li
                    className="bx--progress-step bx--progress-step--complete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg
                        aria-hidden={true}
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M8,14c-3.3,0-6-2.7-6-6s2.7-6,6-6s6,2.7,6,6S11.3,14,8,14z"
                        />
                        <path
                          d="M7 10.8L4.5 8.3 5.3 7.5 7 9.2 10.7 5.5 11.5 6.3z"
                        />
                        <title>
                          Identity
                        </title>
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Identity
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button bx--progress-step-button--unclickable"
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={-1}
                    >
                      <svg>
                        <path
                          d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
                        />
                        <title>
                          State Model
                        </title>
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        State Model
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg>
                        <title>
                          Notifications
                        </title>
                        <path
                          d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
                        />
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Notifications
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg>
                        <title>
                          Final step
                        </title>
                        <path
                          d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
                        />
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Final step
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              className="TableDetailWizard__StyledContentContainer-sc-15frmjo-4 hxUSxO"
            >
              <div>
                <div
                  style={
                    Object {
                      "backgroundColor": "#dceadd",
                      "padding": "70px 30px",
                    }
                  }
                >
                  <div>
                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum mollitia repellendus assumenda fuga inventore nisi, minus optio ullam voluptas eveniet dolore dolorem vitae, neque suscipit labore at. Voluptatum, nobis perferendis!
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="TableDetailWizard__StyledFooter-sc-15frmjo-3 dZaQHZ"
          >
            <div
              className="bx--modal-footer"
            >
              <div
                className="WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
              >
                <button
                  className="iot--btn bx--btn bx--btn--secondary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Back
                </button>
                <button
                  className="iot--btn bx--btn bx--btn--primary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|TableDetailWizard with error 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="TableDetailWizard__StyledWizardWrapper-sc-15frmjo-0 fotMIZ"
        >
          <div
            className="TableDetailWizardHeader__StyledDivWizardHeader-sc-1pa3n63-0 hKHZJV"
          >
            <h2
              className="TableDetailWizardHeader__StyledDivHeading-sc-1pa3n63-1 eKyans"
            >
              Create Physical Interface
            </h2>
            <div
              className="TableDetailWizardHeader__StyledButton-sc-1pa3n63-2 jNjnLX"
            >
              <button
                className="bx--btn bx--btn--ghost"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            className="TableDetailWizard__StyledWizardContainer-sc-15frmjo-1 kjwloH"
          >
            <div
              className="TableDetailWizardSidebar__StyledDivWizardHeader-sc-1wxoi33-0 fSDZCW"
            >
              <div
                className="WizardSidebar__StyledSidebar-sc-1bufur3-0 hklDaT"
                width={250}
              >
                <ul
                  className="bx--progress  bx--progress--vertical ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 fvWusc"
                  onChange={[Function]}
                >
                  <li
                    className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button bx--progress-step-button--unclickable"
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={-1}
                    >
                      <svg>
                        <path
                          d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
                        />
                        <title>
                          Identity
                        </title>
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Identity
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg>
                        <title>
                          State Model
                        </title>
                        <path
                          d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
                        />
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        State Model
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg>
                        <title>
                          Notifications
                        </title>
                        <path
                          d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
                        />
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Notifications
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                  <li
                    className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 jNikwx"
                  >
                    <div
                      className="bx--progress-step-button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <svg>
                        <title>
                          Final step
                        </title>
                        <path
                          d="M8 1C4.1 1 1 4.1 1 8s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 13c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
                        />
                      </svg>
                      <p
                        className="bx--progress-label"
                      >
                        Final step
                      </p>
                      <span
                        className="bx--progress-line"
                      />
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              className="TableDetailWizard__StyledContentContainer-sc-15frmjo-4 hxUSxO"
            >
              <div>
                <div
                  style={
                    Object {
                      "backgroundColor": "#eaeaea",
                    }
                  }
                >
                  <div>
                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, corrupti laboriosam, culpa similique quae dolorum provident vitae iusto at velit dignissimos reiciendis maiores voluptate fugit dolore harum unde laborum facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta placeat explicabo! Necessitatibus id neque accusantium molestiae officiis ducimus! Suscipit quae perferendis officiis vel, magnam est error! Vel, accusantium quas enim inventore natus adipisci autem at modi dolores assumenda mollitia ut facilis, deleniti aspernatur? Fuga at in expedita tempora cum quasi nemo neque alias id ullam omnis similique placeat provident, eum totam itaque perferendis, reiciendis laboriosam ducimus sunt facilis amet? Cupiditate voluptatem et, voluptas maxime sunt possimus repudiandae nisi necessitatibus?
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="bx--inline-notification bx--inline-notification--error TableDetailWizard__StyledMessageBox-sc-15frmjo-2 bHjJtp"
            kind="error"
            role="alert"
          >
            <div
              className="bx--inline-notification__details"
            >
              <svg
                aria-hidden={true}
                className="bx--inline-notification__icon"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 20 20"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
                />
                <path
                  d="M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
                  data-icon-path="inner-path"
                  opacity="0"
                />
                <title>
                  closes notification
                </title>
              </svg>
              <div
                className="bx--inline-notification__text-wrapper"
              >
                <p
                  className="bx--inline-notification__title"
                >
                  Error on the form
                </p>
                <div
                  className="bx--inline-notification__subtitle"
                >
                  
                </div>
              </div>
            </div>
            <button
              aria-label="closes notification"
              className="bx--inline-notification__close-button"
              onClick={[Function]}
              title="closes notification"
              type="button"
            >
              <svg
                aria-label="close notification"
                className="bx--inline-notification__close-icon"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                style={
                  Object {
                    "willChange": "transform",
                  }
                }
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                />
              </svg>
            </button>
          </div>
          <div
            className="TableDetailWizard__StyledFooter-sc-15frmjo-3 dZaQHZ"
          >
            <div
              className="bx--modal-footer"
            >
              <div
                className="WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
              >
                <button
                  className="iot--btn bx--btn bx--btn--secondary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="iot--btn bx--btn bx--btn--primary"
                  disabled={false}
                  onClick={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  Next
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": 12,
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;
